kubernetes/base/app/policy/networkpolicy-allow-egress-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cloud-cost-advisor-allow-egress-dns
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: cloud-cost-advisor
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
